@@ -29,7 +29,38 @@
     <hr>
     <br>
     
-    
+    <article>
+      <h2><i>Doctor Who</i> (1963) Season 22 Thoughts</h2>
+      <p><b>8-23-24</b></p>
+      <p>This season of <i>Doctor Who</i> was action-packed, with the first story being a Cybermen story, a new location and enemies, the return of the Master and a new enemy in the Rani, a multi-doctor story with the return of 
+      the Sontarans, then an adventure on a new world with H.G. Wells, and a Dalek story to finish it off.</p>
+      <p> Starting with the first story, <i>Attack of the Cybermen</i>, the Doctor and Peri land in London in the 1980s after following a distress signal, which he goes looking for, then, running into trouble with some locals, 
+      they follow them down to the sewers where they meet Lytton, who is working for the cyberman, and then they go to Telos to stop the Cyberman from changing history, while there they meet the Telosians, then Lytton gets 
+      partially turned into a cyberman, and the doctor defeats the Cyber Controller. The second story, <i>Vengeance on Varos</i>, has the TARDIS experiencing power failures, so the Doctor lands on the nearby planet of Varos,
+      where a special metal will help fix it, but they end up landing in the Punishment Dome, a place of torture and death for the entertainment of the miners of the planet. When the Doctor and Peri Leave they free one of the 
+      prisoners, leading to a chase and the Capture of Peri and the doctor, where the people in charge try to figure out why he came. Then, Peri and one of the Prisoners are experimented on, the Doctor and one of the Prisoners 
+      sent to be executed, but the doctor says why he is here, and tells the governor that the company that is buying the metal is not giving the planet the best price possible, so the governer doesn't kill them, and then they 
+      go save peri and the others, The governer is put to a vote with Peri next to him, but a guard shoots the cell decay beam before it can hurt them too much. The third story, <i>The Mark of the Rani</i> has the tardis land in 
+      1820s England, where they go to find a man named stevenson, when they run into the master who is trying to kill the doctor, and then the master runs into the rani and they collaborate, until the doctor comes in and foils 
+      both of their plans, this story is the first of my three favorites.</p>
+      <p>The fourth story, <i>The Two Doctors</i>, has the the Second doctor and Jamie being sent by the Time Lords to a Scientific research space station to try and stop dangerous experiments into time travel. 
+      Then the Second Doctor is captured by the Sontarans and taken to earth while Jamie is left behind, and then the Sixth Doctor and Peri arrive at the research station, having to evade the hostile computer. After they fix the 
+      computer, they find Jamie and Jamie tells them that the doctor was executed, and they head to earth to rescue him. On Earth, the Sontarans Have set up shop in a house in the Spanish countryside, and are experimenting on 
+      the Second Doctor. The Sixth Doctor, Peri and Jamie infiltrate the house and try to rescue the Second Doctor, but the Scientist working with the Sontarans turn him into an Androgum, and the Sixth Doctor Peri and Jamie had 
+      to chase him down. When they found him and brought him back, they cured him, and then the Sixth doctor was forced to make the Kartz-Reimer Capsule work by the sontarans, but took an important part before the Sontarans Used 
+      it, and then defeated the Scientists, this story is the second of my three favorites. The fifth story, <i>Timelash</i>, has The Sixth Doctor and Peri getting caught in a Time Corridor that leads from the planet Karfel
+      to 19th century Earth, as they are stuck in the corridor, they see a person pass down it, and then materialize on Karfel, where the Doctor is sent to retrieve a necklace on Earth, when they materialize, he meets a young 
+      H.G. Wells, who stowes away on the Tardis, when they return, the Doctor finds Peri is missing, and is sent to the Borad, whom the doctor met in his third incarnation, he then sets up an plan to defeat the Borad by using 
+      Crystals that move a person ahead 6 seconds in time, which he uses to great effect on the borad, after which he saves Peri, and then uses the Tardis as a shield to block a missile from blowing up the planet, 
+      this story is the final of my three favorites. 
+      The Sixth and final story, <i>Revelation of the Daleks</i>, Has the Sixth Doctor and Peri landing on the Planet Necros, where he intends on seeing an old friend cryogenicly frozen, but Davros, Posing as 'The Great Healer' 
+      intends to put an end to the Doctor's meddling, and finally make the Daleks the Superior race, but the Doctor figures out his plan with the help of a mercenary, and defeats him.</p>
+      <p>All in all it was a great seaon, and the Sixth Doctor is growing on me a bit. I really liked Colin Baker and Patrick Troughton together, I think the way they each played the doctor compliments each other. I also think 
+      H.G. Wells was done really well, and I love that it says that the Doctor and the Tardis influences <i>The Time Machine</i>. Intrestingly enough, I did just realize that Peri was supposed to be an American, which make her
+      character the first American Companion which is really cool, Now I'd love to see an actual American actor play a companion, maybe in Series 15 of the 2005 show.</p>
+    </article>
+      
+    <br>
     
     <article>
       <h2>My Thanks for an Updated <i>Doctor Who</i> Timeline</h2>
