@@ -85,7 +85,7 @@
       
       <h3>Currently Watching</h3>
       <ul>
-        <li>Doctor Who (1963) S22</li>
+        <li>Doctor Who (1963) S23</li>
         <li>Doctor Who (2005) S11</li>
         <li>Star Trek: The Original Series S2</li>
         <li>Star Trek: The Next Generation S2</li>
@@ -95,6 +95,7 @@
       <details>
         <summary>Recently Completed</summary>
         <ul>
+          <li>Doctor Who (1963) S22</li>
           <li>Star Wars: The Bad Batch S3</li>
           <li>Doctor Who (1963) S21</li>
           <li>Doctor Who (2005) S10</li>
